MyDemoProject/src/objects/Xero_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Private_Key__c</fullName>
        <label>My Private Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Key__c</fullName>
        <label>Private Key</label>
        <length>33000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Xero Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>X-{0}</displayFormat>
        <label>Xero Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>